Closed
Bug 1332898
Opened 8 years ago
Closed 8 years ago
Port bug 1332523 to TB [Various cleanup before full fledged refactoring of the bootstrap API]
Categories
(Thunderbird :: General, defect)
Thunderbird
General
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 53.0
People
(Reporter: Paenglab, Assigned: Paenglab)
Details
Attachments
(1 file)
3.34 KB,
patch
|
jorgk-bmo
:
review+
|
Details | Diff | Splinter Review |
From bug 1332523 comment 0:
I have some patches that can land independently of more definite changes on the bootstrap API.
I'm building now without this patch to see if it breaks TB.
Assignee | ||
Comment 1•8 years ago
|
||
It breaks without patch. With it it builds and TB works.
Jörg, your diff magic is in demand again. :-)
I'm away soon, please can you land it, when it's okay?
Assignee | ||
Comment 2•8 years ago
|
||
Important: the now checked-in bug 1332827 needs to be applied first.
Comment 3•8 years ago
|
||
Comment on attachment 8829200 [details] [diff] [review]
bug1332898.patch
(In reply to Richard Marti (:Paenglab) from comment #1)
> Jörg, your diff magic is in demand again. :-)
I know the five differenced between M-C's nsBrowserApp.cpp and C-C's nsMailApp.cpp by heart (German: auswendig) now!
> I'm away soon, please can you land it, when it's okay?
Landing, now, stand by ;-)
Of course, many thanks, like always!
Attachment #8829200 -
Flags: review?(jorgk) → review+
Comment 4•8 years ago
|
||
https://hg.mozilla.org/comm-central/rev/137c08b2e6e4801d2e884a3e6c8473becd267bc8
This needs porting to IB and SM, like bug 1332827 and bug 1332017.
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Flags: needinfo?(philip.chee)
Flags: needinfo?(frgrahl)
Flags: needinfo?(aleth)
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 53.0
![]() |
||
Comment 5•8 years ago
|
||
Thanks. Just found out 15 minutes ago and on it for SeaMonkey. Ewongs Bug 1332173 is still not reviewed and we can probably merge it with it.
Flags: needinfo?(frgrahl)
Comment 6•8 years ago
|
||
(In reply to Richard Marti (:Paenglab) from comment #1)
> It breaks without patch. With it it builds and TB works.
Hmm, I recompiled and TB doesn't even start :-(
I'll try a clobber build.
Comment 7•8 years ago
|
||
Hmm, recompiled and opening the application still crashes. I can run xpcshell. I have a 64bit debug build.
Stack:
mozglue.dll!arena_dalloc(void * ptr, unsigned __int64 offset) Line 4709 C
thunderbird.exe!mozilla::GetBootstrap(const char * aXPCOMFile) Line 417 C++
thunderbird.exe!InitXPCOMGlue(const char * argv0) Line 248 C++
thunderbird.exe!NS_internal_main(int argc, char * * argv, char * * envp) Line 297 C++
thunderbird.exe!wmain(int argc, wchar_t * * argv) Line 118 C++
FRG, does you debug build start?
Flags: needinfo?(frgrahl)
Comment 8•8 years ago
|
||
On the console I see:
jemalloc.c:4710: Failed assertion: "arena != NULL"
Hit MOZ_CRASH() at jemalloc_config.cpp:163
![]() |
||
Comment 9•8 years ago
|
||
Jorg,
I have a non debug build right now only which works fine. I need to clean up the patch a little further and can check later.
Flags: needinfo?(frgrahl)
Assignee | ||
Comment 10•8 years ago
|
||
Today Daily works and the tests don't look different to yesterday.
Comment 11•8 years ago
|
||
I know. I've been looking at this all day, now doing my fourth full build. Basically it just crashes in some memory deallocation called during the program's initialisation in main(). I have all the details.
I still had --disable-sandboxing in my mozconfig which isn't used elsewhere. So maybe that's the cause. One hour to go in the compile.
![]() |
||
Comment 12•8 years ago
|
||
> This needs porting to IB and SM, like bug 1332827 and bug 1332017.
ACK.
Flags: needinfo?(philip.chee)
Updated•8 years ago
|
Flags: needinfo?(aleth)
You need to log in
before you can comment on or make changes to this bug.
Description
•