Bug 1332898 - Port bug 1332523 to TB [Various cleanup before full fledged refactoring of the bootstrap API]. r=jorgk